...
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lens_detected_landmark_text"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/lens_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_camera" />

            <ImageView
                android:id="@+id/lens_dismiss_landmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_done"
                android:visibility="gone" />
...
